--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Peter Hu",
   "license": "ISC",
   "devDependencies": {
-    "rxjs": "^5.0.0-beta.8"
+    "rxjs": "^5.0.0-beta.8",
+    "webpack": "^1.13.1"
   }
 }
